@@ -1,3 +1,10 @@
+2002-05-16  Mo DeJong  <mdejong@users.sourceforge.net>
+
+	* configure: Regen.
+	* tcljava.m4 (AC_JAVA_JNI_LIBS): Fallback to using
+	the clasic JVM if a client JVM is not available
+	for a JDK 1.3/1.4 file layout.
+
 2002-05-16  Maurice Diamantini  <diam@ensta.fr>
 
 	* src/jacl/tcl/lang/Util.java (isMac): Return false for
